# NVSHMEM

./: CMakeLists.txt  Config  changelog  nvshmem_src_3.2.5-1.txz
cmake_config/: NVSHMEMEnv.cmake
docker/: srun_wrapper.sh
examples/examples_install/: collective-launch  dev-guide-ring  dev-guide-ring-mpi  moe_shuffle  mpi-based-init  on-stream  put-block  ring-bcast  ring-reduce  uid-based-init  user-buffer
nvshmem4py/: CMakeLists.txt  requirements_build.txt  requirements_cuda11.txt  requirements_cuda12.txt  requirements_cuda13.txt  requirements_optional_cuda12.txt  requirements_optional_cuda13.txt
nvshmem4py/build_assets/numbast/: config_nvshmem.py  generate_mem.py
nvshmem4py/cmake/: addNumbast.cmake
nvshmem4py/examples/: device_ring_all_reduce.py
nvshmem4py/nvshmem/core/: init_fini.py  memory.py  nvshmem_types.py  teams.py
nvshmem4py/scripts/: find_python_versions.sh  generate_pyproject_toml.py
nvshmem4py/test/: collective_test.py  init_test.py  memory_test.py  rma_test.py  teams_test.py  test_collective.py  test_get_version.py  test_highlevel_bindings.py  test_npe.py  test_ptr.py  test_ring.py  test_ring_allreduce.py  utils.py  wheel_sanity_test.py
perftest/: CMakeLists.txt
perftest/common/: atomic_one_sided_common.h  atomic_ping_pong_common.h  utils.cu
scripts/: install_hydra.sh
src/: CMakeLists.txt
src/device/: CMakeLists.txt
src/host/comm/: sync.cpp
test/: CMakeLists.txt  README.md
test/apps/: CMakeLists.txt
test/apps/cufft/: CMakeLists.txt  alltoall_bw.cu  cufft_smoke_test.cu  helpers.h
test/apps/dgl/: CMakeLists.txt  dgl.cu
test/apps/interop/: CMakeLists.txt  nccl_nvshmem_interop.cu
test/common/: CMakeLists.txt  alltoall_common.h  barrier_common.h  broadcast_common.h  coll_common.h  data_check.cpp  data_check.h  fcollect_common.h  perf_utils.cu  perf_utils.h  reduce_common.h  reducescatter_common.h  ring_alltoall.cpp  ring_alltoall.h  test_teams.cpp  test_teams.h  utils.cu  utils.h  utils_internal.h
test/common/test-simple-pmi/: test_pmi_internal.h  test_simple_pmi.cpp  test_simple_pmiutil.cpp  test_simple_pmiutil.h
test/device/: CMakeLists.txt
test/device/coll/: CMakeLists.txt  alltoall.cu  barrier.cu  broadcast.cu  coll_test.h  fcollect.cu  reduce_block_and.cu  reduce_block_max.cu  reduce_block_min.cu  reduce_block_or.cu  reduce_block_prod.cu  reduce_block_sum.cu  reduce_block_xor.cu  reduce_maxloc.cu  reduce_thread_and.cu  reduce_thread_max.cu  reduce_thread_min.cu  reduce_thread_or.cu  reduce_thread_prod.cu  reduce_thread_sum.cu  reduce_thread_xor.cu  reduce_warp_and.cu  reduce_warp_max.cu  reduce_warp_min.cu  reduce_warp_or.cu  reduce_warp_prod.cu  reduce_warp_sum.cu  reduce_warp_xor.cu  reducescatter_block_and.cu  reducescatter_block_max.cu  reducescatter_block_min.cu  reducescatter_block_or.cu  reducescatter_block_prod.cu  reducescatter_block_sum.cu  reducescatter_block_xor.cu  reducescatter_thread_and.cu  reducescatter_thread_max.cu  reducescatter_thread_min.cu  reducescatter_thread_or.cu  reducescatter_thread_prod.cu  (+9 more)
test/device/init/: CMakeLists.txt  global_exit.cu
test/device/pt-to-pt/: CMakeLists.txt  atomic_add.cu  atomic_and.cu  atomic_compare_swap.cu  atomic_fetch.cu  atomic_inc.cu  atomic_or.cu  atomic_set.cu  atomic_swap.cu  atomic_xor.cu  g.cu  g_extended.cu  get.cu  get_nbi.cu  getmem.cu  getmem_nbi.cu  getsize.cu  getsize_nbi.cu  iget.cu  iput.cu  p.cu  put.cu  put_nbi.cu  put_signal.cu  put_signal_nbi.cu  putmem.cu  putmem_nbi.cu  putsize.cu  putsize_nbi.cu  qp_specific_apis.cu  set.cu  shmem_ll_ping_pong_latency.cu  signal.cu  signal_add.cu  signal_set.cu  swap.cu  wait.cu
test/device/query/: CMakeLists.txt  hello-team.cu  hello.cu  info.cu  mc_ptr.cu  ptr.cu
test/device/sync/: CMakeLists.txt  sync_test.cu  test_all_any_some.cu  test_any.cu  test_some.cu  test_vector.cu  wait_until.cu  wait_until_all.cu  wait_until_any.cu  wait_until_some.cu  wait_until_vector.cu
test/device/tile/: CMakeLists.txt  tile_allgather.cu  tile_allgather_1D.cu  tile_allgather_pred.cu  tile_allreduce.cu  tile_allreduce_1D.cu  tile_allreduce_pred.cu  tile_bcast_pred.cu  tile_get.cu  tile_put.cu  tile_reduce.cu
test/host/: CMakeLists.txt
test/host/coll/: CMakeLists.txt  alltoall.cu  barrier.cu  barrier_all.cu  broadcast.cu  collective_launch_choose_grid.args  collective_launch_choose_grid.cu  collective_launch_user_specified_grid.args  collective_launch_user_specified_grid.cu  fcollect.cu  reduce.cu  reducescatter.cu
test/host/init/: CMakeLists.txt  cuobject_init.cpp  global_exit.cpp  init_loop.cpp  kernel_nvshmem.cu  mpi_init.cpp  nvrtc_api.cpp  nvrtc_numba_ltoir.cpp  nvshmemx_hostlib_init_attr.cpp  nvshmemx_init_status.cpp  nvshmemx_init_with_device.cpp  shmem_init.cpp  static_init.cpp  uid_init.cpp
test/host/interop/: CMakeLists.txt  app.cu  app_multi_init.cu  simplelib1.cu  simplelib1.h  simplelib1.sym  simplelib2.cu  simplelib2.h  simplelib2.sym
test/host/mem/: CMakeLists.txt  align_bins.cpp  align_free_reorder.cpp  calloc.cpp  malloc_bins.cpp  malloc_free_loop.cpp  malloc_free_reorder.cpp  malloc_loop.cpp  malloc_simple.cpp  mmap_unmap_loop.args  mmap_unmap_loop.cu  register_buffer.cu
test/host/pt-to-pt/: CMakeLists.txt  fence.cpp  g.cpp  get.cpp  iget.cpp  iput.cpp  p.cpp  put.cpp  quiet.args  quiet.cpp  quiet_on_stream.cu  signal_on_stream.cpp  wait.cpp  wait_until_all_on_stream.cpp  wait_until_all_vector_on_stream.cpp
test/host/team/: CMakeLists.txt  shmem_team_dup.cpp  shmem_team_max.cpp  shmem_team_reuse_teams.cpp  shmem_team_split_2d.cpp  shmem_team_translate_2.cpp
test/unit/: CMakeLists.txt
test/unit/host/: CMakeLists.txt
test/unit/host/bootstrap/: CMakeLists.txt  bootstrap_coll.cpp
test/unit/mem/: CMakeLists.txt
test/unit/mem/heap/: CMakeLists.txt  dynamic_unit_tests.cpp  nvshmemi_symmetric_heap_unit_tests.cpp  static_unit_tests.cpp
test/unit/mem/heap/internal/host/: nvshmem_nvtx.hpp  nvshmemi_mem_transport.hpp  nvshmemi_nvls_rsc.hpp
test/unit/mem/transport/: CMakeLists.txt  P2P_unit_tests.cpp  remote_unit_tests.cpp
test/unit/mem/transport/internal/host/: nvshmemi_symmetric_heap.hpp
(+82 files in other folders)
