set(NVSHMEM_TEST_PREFIX "device_")
macro(nvshmem_add_test SOURCE)
  nvshmem_add_test_prefix(${SOURCE} ${NVSHMEM_TEST_PREFIX} ON)
endmacro()
if(NVSHMEM_BUILD_BITCODE_LIBRARY)
  macro(nvshmem_add_cubin_test SOURCE)
    nvshmem_add_cubin_test_prefix(${SOURCE} ${NVSHMEM_TEST_PREFIX})
  endmacro()
endif()
add_subdirectory(tile)
add_subdirectory(coll)
add_subdirectory(init)
add_subdirectory(pt-to-pt)
add_subdirectory(query)
add_subdirectory(sync)
